3-3. 키보드로 데이터 입력

--- a/C_Playground/C_Playground.vcxproj
+++ b/C_Playground/C_Playground.vcxproj
@@ -125,6 +125,7 @@
   <ItemGroup>
     <ClCompile Include="Hello.c" />
     <ClCompile Include="operator.c" />
+    <ClCompile Include="scan.c" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
