--- a/C_Playground/C_Playground.vcxproj.filters
+++ b/C_Playground/C_Playground.vcxproj.filters
@@ -21,5 +21,8 @@
     <ClCompile Include="operator.c">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="scan.c">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
