--- a/C_Playground/C_Playground.vcxproj
+++ b/C_Playground/C_Playground.vcxproj
@@ -124,6 +124,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="Hello.c" />
+    <ClCompile Include="notation.c" />
     <ClCompile Include="operator.c" />
     <ClCompile Include="scan.c" />
   </ItemGroup>
