--- a/C_Playground/C_Playground.vcxproj.filters
+++ b/C_Playground/C_Playground.vcxproj.filters
@@ -24,5 +24,8 @@
     <ClCompile Include="scan.c">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="notation.c">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
