챕터 5장을 완료했다

--- a/C_Playground/C_Playground.vcxproj
+++ b/C_Playground/C_Playground.vcxproj
@@ -123,6 +123,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="dataType.c" />
     <ClCompile Include="Hello.c" />
     <ClCompile Include="notation.c" />
     <ClCompile Include="operator.c" />
