--- a/C_Playground/C_Playground.vcxproj.filters
+++ b/C_Playground/C_Playground.vcxproj.filters
@@ -30,5 +30,8 @@
     <ClCompile Include="dataType.c">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="loop.c">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
