--- a/C_Playground/C_Playground.vcxproj
+++ b/C_Playground/C_Playground.vcxproj
@@ -125,6 +125,7 @@
   <ItemGroup>
     <ClCompile Include="dataType.c" />
     <ClCompile Include="Hello.c" />
+    <ClCompile Include="ifElse.c" />
     <ClCompile Include="loop.c" />
     <ClCompile Include="notation.c" />
     <ClCompile Include="operator.c" />
