--- a/C_Playground/C_Playground.vcxproj.filters
+++ b/C_Playground/C_Playground.vcxproj.filters
@@ -33,5 +33,8 @@
     <ClCompile Include="loop.c">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="ifElse.c">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
